--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,12 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud-scheduler-spi.version>1.0.0.BUILD-SNAPSHOT</spring-cloud-scheduler-spi.version>
-		<cloudfoundry-java-lib.version>3.8.0.RELEASE</cloudfoundry-java-lib.version>
-		<reactor-core.version>3.1.5.RELEASE</reactor-core.version>
-		<reactor-netty.version>0.7.5.RELEASE</reactor-netty.version>
-		<pivotal-cf-client-reactor.version>1.0.0.RELEASE</pivotal-cf-client-reactor.version>
+		<cloudfoundry-java-lib.version>3.12.0.RELEASE</cloudfoundry-java-lib.version>
+		<reactor-core.version>3.1.8.RELEASE</reactor-core.version>
+		<reactor-netty.version>0.7.8.RELEASE</reactor-netty.version>
+		<pivotal-cf-client-reactor.version>1.1.0.RELEASE</pivotal-cf-client-reactor.version>
 		<deployer.version>1.3.2.RELEASE</deployer.version>
 		<spring-cloud-deployer-cloud-foundry.version>1.4.1.BUILD-SNAPSHOT</spring-cloud-deployer-cloud-foundry.version>
-
 	</properties>
 
 	<dependencies>
@@ -102,6 +101,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-deployer-cloudfoundry</artifactId>
 			<version>${spring-cloud-deployer-cloud-foundry.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
 		</dependency>
 	</dependencies>
 
