--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 		<cloudfoundry-java-lib.version>3.8.0.RELEASE</cloudfoundry-java-lib.version>
 		<reactor-core.version>3.1.5.RELEASE</reactor-core.version>
 		<reactor-netty.version>0.7.5.RELEASE</reactor-netty.version>
-		<pivotal-cf-client-reactor>1.0.0.RELEASE</pivotal-cf-client-reactor>
-		<deployer-version>1.3.2.RELEASE</deployer-version>
+		<pivotal-cf-client-reactor.version>1.0.0.RELEASE</pivotal-cf-client-reactor.version>
+		<deployer.version>1.3.2.RELEASE</deployer.version>
 		<spring-cloud-deployer-cloud-foundry.version>1.4.0.BUILD-SNAPSHOT</spring-cloud-deployer-cloud-foundry.version>
 
 	</properties>
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>io.pivotal</groupId>
 			<artifactId>pivotal-cloudfoundry-client-reactor</artifactId>
-			<version>${pivotal-cf-client-reactor}</version>
+			<version>${pivotal-cf-client-reactor.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
@@ -86,17 +86,17 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-deployer-resource-support</artifactId>
-			<version>${deployer-version}</version>
+			<version>${deployer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-deployer-resource-maven</artifactId>
-			<version>${deployer-version}</version>
+			<version>${deployer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-deployer-resource-docker</artifactId>
-			<version>${deployer-version}</version>
+			<version>${deployer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
