--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,10 @@
 			<artifactId>spring-cloud-deployer-cloudfoundry</artifactId>
 			<version>${spring-cloud-deployer-cloud-foundry.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
