--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<pivotal-cf-client-reactor.version>1.1.0.RELEASE</pivotal-cf-client-reactor.version>
 		<deployer.version>1.3.3.RELEASE</deployer.version>
 		<spring-cloud-deployer-cloud-foundry.version>1.4.1.RELEASE</spring-cloud-deployer-cloud-foundry.version>
+		<quartz.version>2.3.0</quartz.version>
 	</properties>
 
 	<dependencies>
@@ -105,6 +106,11 @@
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
 		</dependency>
 	</dependencies>
 
