--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # Package Files #
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs, see https://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 
