--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-cloud-scheduler-cloudfoundry</artifactId>
-	<version>1.0.3.BUILD-SNAPSHOT</version>
+	<version>2.0.0.BUILD-SNAPSHOT</version>
 	<groupId>org.springframework.cloud</groupId>
 	<packaging>jar</packaging>
 
@@ -12,18 +12,18 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-scheduler-parent</artifactId>
-		<version>1.0.1.RELEASE</version>
+		<version>2.0.0.BUILD-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud-scheduler-spi.version>1.0.1.RELEASE</spring-cloud-scheduler-spi.version>
+		<spring-cloud-scheduler-spi.version>2.0.0.BUILD-SNAPSHOT</spring-cloud-scheduler-spi.version>
 		<cloudfoundry-java-lib.version>3.12.0.RELEASE</cloudfoundry-java-lib.version>
 		<reactor-core.version>3.1.8.RELEASE</reactor-core.version>
 		<reactor-netty.version>0.7.8.RELEASE</reactor-netty.version>
 		<pivotal-cf-client-reactor.version>1.1.0.RELEASE</pivotal-cf-client-reactor.version>
-		<deployer.version>1.3.3.RELEASE</deployer.version>
+		<deployer.version>2.0.3.RC1</deployer.version>
 		<spring-cloud-deployer-cloud-foundry.version>1.4.4.RELEASE</spring-cloud-deployer-cloud-foundry.version>
 	</properties>
 
